[MODSET-37] Migrate tenant addresses from mod-configuration to mod-settings
