# src/main/resources/openapi/settings.yaml
@@ -28,6 +28,97 @@ paths:
           $ref: "#/components/responses/trait_400"
         "500":
           $ref: "#/components/responses/trait_500"
+  /tenant-addresses:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/offset.yaml
+    get:
+      description: Get tenant addresses
+      operationId: getTenantAddresses
+      responses:
+        "200":
+          description: The tenant addresses
+          content:
+            application/json:
+              schema:
+                $ref: schemas/tenantAddresses.json
+        "500":
+          $ref: "#/components/responses/trait_500"
+    post:
+      description: Create tenant address
+      operationId: createTenantAddress
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: schemas/tenantAddress.json
+      responses:
+        "201":
+          description: Tenant address created
+          content:
+            application/json:
+              schema:
+                $ref: schemas/tenantAddress.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "409":
+          description: Tenant address name already exists
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /tenant-addresses/{id}:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - in: path
+        name: id
+        required: true
+        description: Tenant address identifier
+        schema:
+          type: string
+          format: uuid
+    get:
+      description: Get tenant address by id
+      operationId: getTenantAddress
+      responses:
+        "200":
+          description: The tenant address
+          content:
+            application/json:
+              schema:
+                $ref: schemas/tenantAddress.json
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    put:
+      description: Update tenant address
+      operationId: updateTenantAddress
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: schemas/tenantAddress.json
+      responses:
+        "204":
+          description: Tenant address updated
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "409":
+          description: Tenant address name already exists
+        "500":
+          $ref: "#/components/responses/trait_500"
+    delete:
+      description: Delete tenant address
+      operationId: deleteTenantAddress
+      responses:
+        "204":
+          description: Tenant address deleted
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
   /settings/entries:
     parameters:
       - $ref: headers/okapi-permissions.yaml
